code wrapping fix

--- a/public/index.css
+++ b/public/index.css
@@ -1162,10 +1162,6 @@ video {
   width: 6rem;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
 .w-4\/5 {
   width: 80%;
 }
@@ -1174,12 +1170,12 @@ video {
   width: 83.333333%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-11\/12 {
   width: 91.666667%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-1\/12 {
@@ -1192,6 +1188,10 @@ video {
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .min-w-full {
@@ -1966,11 +1966,6 @@ video {
   padding-right: 0px;
 }
 
-.py-9 {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
-}
-
 .px-\[30px\] {
   padding-left: 30px;
   padding-right: 30px;
@@ -1989,6 +1984,11 @@ video {
 .py-\[12px\] {
   padding-top: 12px;
   padding-bottom: 12px;
+}
+
+.py-9 {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
 }
 
 .pt-2 {
@@ -2053,6 +2053,22 @@ video {
 
 .pl-8 {
   padding-left: 2rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pr-9 {
+  padding-right: 2.25rem;
 }
 
 .text-left {
@@ -2991,12 +3007,12 @@ video {
     grid-row: span 1 / span 1;
   }
 
-  .sm\:mt-0 {
-    margin-top: 0px;
-  }
-
   .sm\:mt-8 {
     margin-top: 2rem;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
   }
 
   .sm\:block {
@@ -3019,10 +3035,6 @@ video {
     height: 100vh;
   }
 
-  .sm\:w-7 {
-    width: 1.75rem;
-  }
-
   .sm\:w-full {
     width: 100%;
   }
@@ -3033,6 +3045,10 @@ video {
 
   .sm\:w-4\/5 {
     width: 80%;
+  }
+
+  .sm\:w-7 {
+    width: 1.75rem;
   }
 
   .sm\:grid-cols-3 {
@@ -3063,16 +3079,16 @@ video {
     padding-right: 46px;
   }
 
-  .sm\:pb-2 {
-    padding-bottom: 0.5rem;
-  }
-
   .sm\:pt-2 {
     padding-top: 0.5rem;
   }
 
   .sm\:pl-2 {
     padding-left: 0.5rem;
+  }
+
+  .sm\:pb-2 {
+    padding-bottom: 0.5rem;
   }
 
   .sm\:text-left {
@@ -3082,6 +3098,11 @@ video {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .sm\:text-base {
@@ -3131,10 +3152,6 @@ video {
     display: none;
   }
 
-  .md\:h-7 {
-    height: 1.75rem;
-  }
-
   .md\:h-screen {
     height: 100vh;
   }
@@ -3147,8 +3164,8 @@ video {
     height: 20rem;
   }
 
-  .md\:w-11\/12 {
-    width: 91.666667%;
+  .md\:h-7 {
+    height: 1.75rem;
   }
 
   .md\:w-3\/4 {
@@ -3161,6 +3178,10 @@ video {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-11\/12 {
+    width: 91.666667%;
   }
 
   .md\:min-w-full {
@@ -3325,16 +3346,16 @@ video {
     height: 1.25rem;
   }
 
-  .lg\:w-3\/4 {
-    width: 75%;
-  }
-
   .lg\:w-9\/12 {
     width: 75%;
   }
 
   .lg\:w-11\/12 {
     width: 91.666667%;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
   }
 
   .lg\:max-w-sm {
@@ -3445,12 +3466,12 @@ video {
     height: 2.25rem;
   }
 
-  .xl\:w-11\/12 {
-    width: 91.666667%;
-  }
-
   .xl\:w-16 {
     width: 4rem;
+  }
+
+  .xl\:w-11\/12 {
+    width: 91.666667%;
   }
 
   .xl\:w-full {
